@@ -1,0 +1,2 @@
+let _ = ignore (+);;
+let _ = raise Exit 3;;
